@@ -4,6 +4,8 @@
 [Name]
 [Version]
 format = {{ $zilla->is_trial ? "B<This is a development release for testing purposes only.>\n" : '' }}This document describes version %v of%n%m, released %{MMMM d, yyyy}d%nas part of L<%r|HTML::Tree>.
+[AllowOverride / VERSION]
+action = append
 
 [Region  / prelude]
 
